CREATE TABLE "country" (
  "country_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "country_name" varchar(100) UNIQUE NOT NULL,
  "country_code" char(3) UNIQUE NOT NULL
);

CREATE TABLE "city" (
  "city_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "city_name" varchar(100) NOT NULL,
  "country_id" integer NOT NULL
);

CREATE TABLE "warehouse" (
  "warehouse_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "warehouse_name" varchar(150) NOT NULL,
  "city_id" integer NOT NULL,
  "country_id" integer NOT NULL,
  "address" varchar(255) NOT NULL,
  "total_capacity" decimal(10,2)
);

CREATE TABLE "warehouse_section" (
  "section_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "warehouse_id" integer NOT NULL,
  "section_name" varchar(100) NOT NULL,
  "section_type" varchar(50) NOT NULL,
  "has_refrigeration" boolean DEFAULT false,
  "has_climate_control" boolean DEFAULT false,
  "temperature_min" decimal(5,2),
  "temperature_max" decimal(5,2)
);

CREATE TABLE "product" (
  "product_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "product_name" varchar(200) NOT NULL,
  "description" text,
  "category" varchar(100) NOT NULL,
  "base_price" decimal(10,2) NOT NULL,
  "sku" varchar(50) UNIQUE NOT NULL,
  "requires_refrigeration" boolean DEFAULT false,
  "requires_climate_control" boolean DEFAULT false,
  "required_temp_min" decimal(5,2),
  "required_temp_max" decimal(5,2),
  "reorder_threshold" integer NOT NULL DEFAULT 10
);

CREATE TABLE "section_inventory" (
  "inventory_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "section_id" integer NOT NULL,
  "product_id" integer NOT NULL,
  "quantity_available" integer NOT NULL DEFAULT 0,
  "last_updated" timestamp NOT NULL
);

CREATE TABLE "inventory_transaction" (
  "transaction_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "warehouse_id" integer NOT NULL,
  "product_id" integer NOT NULL,
  "transaction_type" varchar(20) NOT NULL,
  "quantity" integer NOT NULL,
  "transaction_date" timestamp NOT NULL,
  "notes" text,
  "employee_id" integer NOT NULL
);

CREATE TABLE "employee" (
  "employee_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "phone" varchar(20),
  "warehouse_id" integer NOT NULL,
  "position" varchar(100) NOT NULL,
  "hire_date" date NOT NULL
);

CREATE TABLE "customer" (
  "customer_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "first_name" varchar(50) NOT NULL,
  "last_name" varchar(50) NOT NULL,
  "email" varchar(100) UNIQUE NOT NULL,
  "phone" varchar(20),
  "shipping_address" varchar(255) NOT NULL,
  "shipping_city_id" integer NOT NULL,
  "shipping_country_id" integer NOT NULL,
  "registration_date" date NOT NULL
);

CREATE TABLE "order" (
  "order_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "customer_id" integer NOT NULL,
  "order_date" timestamp NOT NULL,
  "total_amount" decimal(12,2) NOT NULL,
  "order_status" varchar(30) NOT NULL,
  "tracking_number" varchar(100) UNIQUE,
  "shipped_date" timestamp,
  "delivered_date" timestamp
);

CREATE TABLE "order_item" (
  "order_item_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" integer NOT NULL,
  "product_id" integer NOT NULL,
  "quantity" integer NOT NULL,
  "unit_price" decimal(10,2) NOT NULL,
  "subtotal" decimal(12,2) NOT NULL
);

CREATE TABLE "order_warehouse" (
  "order_warehouse_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "order_id" integer NOT NULL,
  "warehouse_id" integer NOT NULL,
  "fulfillment_status" varchar(30) NOT NULL,
  "assigned_date" timestamp NOT NULL
);

CREATE UNIQUE INDEX ON "section_inventory" ("section_id", "product_id");

CREATE UNIQUE INDEX ON "order_warehouse" ("order_id", "warehouse_id");

COMMENT ON COLUMN "inventory_transaction"."transaction_type" IS 'INBOUND or OUTBOUND';

COMMENT ON COLUMN "order"."order_status" IS 'PENDING, PROCESSING, SHIPPED, DELIVERED, CANCELLED';

COMMENT ON COLUMN "order_warehouse"."fulfillment_status" IS 'ASSIGNED, PICKING, PACKED, SHIPPED';

ALTER TABLE "city" ADD FOREIGN KEY ("country_id") REFERENCES "country" ("country_id");

ALTER TABLE "warehouse" ADD FOREIGN KEY ("city_id") REFERENCES "city" ("city_id");

ALTER TABLE "warehouse" ADD FOREIGN KEY ("country_id") REFERENCES "country" ("country_id");

ALTER TABLE "warehouse_section" ADD FOREIGN KEY ("warehouse_id") REFERENCES "warehouse" ("warehouse_id");

ALTER TABLE "section_inventory" ADD FOREIGN KEY ("section_id") REFERENCES "warehouse_section" ("section_id");

ALTER TABLE "section_inventory" ADD FOREIGN KEY ("product_id") REFERENCES "product" ("product_id");

ALTER TABLE "inventory_transaction" ADD FOREIGN KEY ("warehouse_id") REFERENCES "warehouse" ("warehouse_id");

ALTER TABLE "inventory_transaction" ADD FOREIGN KEY ("product_id") REFERENCES "product" ("product_id");

ALTER TABLE "inventory_transaction" ADD FOREIGN KEY ("employee_id") REFERENCES "employee" ("employee_id");

ALTER TABLE "employee" ADD FOREIGN KEY ("warehouse_id") REFERENCES "warehouse" ("warehouse_id");

ALTER TABLE "customer" ADD FOREIGN KEY ("shipping_city_id") REFERENCES "city" ("city_id");

ALTER TABLE "customer" ADD FOREIGN KEY ("shipping_country_id") REFERENCES "country" ("country_id");

ALTER TABLE "order" ADD FOREIGN KEY ("customer_id") REFERENCES "customer" ("customer_id");

ALTER TABLE "order_item" ADD FOREIGN KEY ("order_id") REFERENCES "order" ("order_id");

ALTER TABLE "order_item" ADD FOREIGN KEY ("product_id") REFERENCES "product" ("product_id");

ALTER TABLE "order_warehouse" ADD FOREIGN KEY ("order_id") REFERENCES "order" ("order_id");

ALTER TABLE "order_warehouse" ADD FOREIGN KEY ("warehouse_id") REFERENCES "warehouse" ("warehouse_id");
