// Database Schema – Online Supermarket Chain
// DBML (Database Markup Language) format

Table country {
  country_id integer [primary key, increment]
  country_name varchar(100) [not null, unique]
  country_code char(3) [not null, unique]
}

Table city {
  city_id integer [primary key, increment]
  city_name varchar(100) [not null]
  country_id integer [not null, ref: > country.country_id]
}

Table warehouse {
  warehouse_id integer [primary key, increment]
  warehouse_name varchar(150) [not null]
  city_id integer [not null, ref: > city.city_id]
  country_id integer [not null, ref: > country.country_id]
  address varchar(255) [not null]
  total_capacity decimal(10,2)
}

Table warehouse_section {
  section_id integer [primary key, increment]
  warehouse_id integer [not null, ref: > warehouse.warehouse_id]
  section_name varchar(100) [not null]
  section_type varchar(50) [not null]
  has_refrigeration boolean [default: false]
  has_climate_control boolean [default: false]
  temperature_min decimal(5,2)
  temperature_max decimal(5,2)
}

Table product {
  product_id integer [primary key, increment]
  product_name varchar(200) [not null]
  description text
  category varchar(100) [not null]
  base_price decimal(10,2) [not null]
  sku varchar(50) [unique, not null]
  requires_refrigeration boolean [default: false]
  requires_climate_control boolean [default: false]
  required_temp_min decimal(5,2)
  required_temp_max decimal(5,2)
  reorder_threshold integer [not null, default: 10]
}

Table section_inventory {
  inventory_id integer [primary key, increment]
  section_id integer [not null, ref: > warehouse_section.section_id]
  product_id integer [not null, ref: > product.product_id]
  quantity_available integer [not null, default: 0]
  last_updated timestamp [not null]
  
  indexes {
    (section_id, product_id) [unique]
  }
}

Table inventory_transaction {
  transaction_id integer [primary key, increment]
  warehouse_id integer [not null, ref: > warehouse.warehouse_id]
  product_id integer [not null, ref: > product.product_id]
  transaction_type varchar(20) [not null, note: 'INBOUND or OUTBOUND']
  quantity integer [not null]
  transaction_date timestamp [not null]
  notes text
  employee_id integer [not null, ref: > employee.employee_id]
}

Table employee {
  employee_id integer [primary key, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  warehouse_id integer [not null, ref: > warehouse.warehouse_id]
  position varchar(100) [not null]
  hire_date date [not null]
}

Table customer {
  customer_id integer [primary key, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  shipping_address varchar(255) [not null]
  shipping_city_id integer [not null, ref: > city.city_id]
  shipping_country_id integer [not null, ref: > country.country_id]
  registration_date date [not null]
}

Table order {
  order_id integer [primary key, increment]
  customer_id integer [not null, ref: > customer.customer_id]
  order_date timestamp [not null]
  total_amount decimal(12,2) [not null]
  order_status varchar(30) [not null, note: 'PENDING, PROCESSING, SHIPPED, DELIVERED, CANCELLED']
  tracking_number varchar(100) [unique]
  shipped_date timestamp
  delivered_date timestamp
}

Table order_item {
  order_item_id integer [primary key, increment]
  order_id integer [not null, ref: > order.order_id]
  product_id integer [not null, ref: > product.product_id]
  quantity integer [not null]
  unit_price decimal(10,2) [not null]
  subtotal decimal(12,2) [not null]
}

Table order_warehouse {
  order_warehouse_id integer [primary key, increment]
  order_id integer [not null, ref: > order.order_id]
  warehouse_id integer [not null, ref: > warehouse.warehouse_id]
  fulfillment_status varchar(30) [not null, note: 'ASSIGNED, PICKING, PACKED, SHIPPED']
  assigned_date timestamp [not null]
  
  indexes {
    (order_id, warehouse_id) [unique]
  }
}

// Relationships
// country (1) → (M) city
// country (1) → (M) warehouse
// country (1) → (M) customer
// city (1) → (M) warehouse
// city (1) → (M) customer
// warehouse (1) → (M) warehouse_section
// warehouse (1) → (M) employee
// warehouse (1) → (M) inventory_transaction
// warehouse (M) ↔ (M) order via order_warehouse
// warehouse_section (1) → (M) section_inventory
// product (1) → (M) section_inventory
// product (1) → (M) inventory_transaction
// product (1) → (M) order_item
// customer (1) → (M) order
// order (1) → (M) order_item
// order (M) ↔ (M) warehouse via order_warehouse